# expenses-report

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: expenses.xlsx
expenses_report/: calcs.py  expense_report.py  main.py  pdf_creator.py  reader.py  settings.py
