[tool.poetry]
name = "expenses-report"
version = "0.1.0"
description = ""
authors = ["Guillem Barroso <guillem.bar.gas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
fpdf = "^1.7.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"